make input a field to avoid passing it around